fix: update overlay color for better contrast in light and dark modes

--- a/src/styles/tokens/sketch-colors.scss
+++ b/src/styles/tokens/sketch-colors.scss
@@ -40,7 +40,7 @@
   --sketch-color-border-disabled: #ebebeb;
   --sketch-color-border-onaccent: #ffffff7d;
 
-  --sketch-color-overlay-default: #ffffffbf;
+  --sketch-color-overlay-default: #1e1f20bf;
 }
 
 :root[data-mode='sketch-dark'] {
@@ -84,5 +84,5 @@
   --sketch-color-border-tertiary: #d9d9d9;
   --sketch-color-border-disabled: #303032;
 
-  --sketch-color-overlay-default: #242427;
+  --sketch-color-overlay-default: #1e1f20bf;
 }
